<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.twomoonsfactory.things.Main"
    style="@style/AppTheme">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/startup"
        android:visibility="gone">
        <TextView android:text="@string/title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:layout_above="@+id/subtitle"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />
        <TextView android:text="@string/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/subtitle"
            android:textStyle="italic" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userPrompt"
            android:layout_alignBottom="@+id/joinButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/waiting"
        android:visibility="gone">

        <TextView
            android:text="@string/loading"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/watingFor"
            android:text="@string/waitingFor"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/chooseCard"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:text="@string/promptPrompt"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="50sp" />
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:id="@+id/prompt1"
                    android:text="@string/cardHere"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:id="@+id/prompt2"
                    android:text="@string/cardHere"
                    android:textSize="25sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:id="@+id/prompt3"
                    android:text="@string/cardHere"
                    android:textSize="25sp"/>

                <TextView
                    style="@style/TextButton"
                    android:layout_marginTop="20sp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/promptButton"
                    android:text="@string/confirm"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        android:id="@+id/entry">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/entryTitle"
            android:textSize="40sp"
            android:layout_margin="10sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40sp"
            android:id="@+id/promptTitle"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/promptDisplay"
            android:text="@string/cardHere"
            android:textSize="30sp"
            android:layout_below="@+id/promptTitle"
            android:layout_marginLeft="40sp"
            android:layout_marginBottom="20sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/promptEntry"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/entryPrompt"/>

        <TextView
            style="@style/TextButton"
            android:layout_below="@+id/promptEntry"
            android:layout_alignParentRight="true"
            android:id="@+id/submitEntry"
            android:text="@string/confirm"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/guessEntry"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:text="@string/entryGuessPrompt"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="5sp" />
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/entry1"
                    android:text="@string/entryHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/entry2"
                    android:text="@string/entryHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/entry3"
                    android:text="@string/entryHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/entry4"
                    android:text="@string/entryHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/entry5"
                    android:text="@string/entryHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/entry6"
                    android:text="@string/entryHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:text="@string/entryHere"
                    android:id="@+id/entry7"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/guessUser"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:text="@string/entryGuessUser"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"

            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginRight="15sp"
            android:id="@+id/guessusertitle"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/guessusertitle"

            android:textSize="25sp"
            android:layout_marginLeft="15sp"
            android:layout_marginBottom="5sp"
            android:text="@string/selectedEntry"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/user1"
                    android:text="@string/userHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/user2"
                    android:text="@string/userHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/user3"
                    android:text="@string/userHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/user4"
                    android:text="@string/userHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/user5"
                    android:text="@string/userHere"/>

                <TextView
                    style="@style/EntryTheme"
                    android:id="@+id/user6"
                    android:text="@string/userHere"/>
                <TextView
                    style="@style/EntryTheme"
                    android:text="@string/userHere"
                    android:id="@+id/user7"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/guessButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:weightSum="1">

            <TextView
                style="@style/TextButton"
                android:text="@string/back"
                android:layout_weight="0.50" />

            <TextView
                style="@style/TextButton"
                android:text="@string/confirm"
                android:gravity="end"
                android:layout_weight="0.50" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/nextGame"
        android:visibility="gone">
        <TextView android:text="@string/title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:layout_above="@+id/subtitle2"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />
        <TextView android:text="@string/subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/subtitle2"
            android:textStyle="italic" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle2">
            <TextView
                android:layout_width="wrap_content"
                android:text="blank"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:layout_weight=".25" />
            <TextView
                style="@style/TextButton"
                android:layout_alignBottom="@+id/playAgain"
                android:layout_weight=".5"
                android:text="@string/nope"/>
            <TextView
                android:id="@+id/playAgain"
                android:layout_weight=".5"
                style="@style/TextButton"
                android:text="@string/joinButton"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
